spacing changes and error fix in Js prt 2

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ O{
     flex-direction: column;
     display: flex;
     justify-content: center;
-    padding: 2em; /**/
+    padding: 2rem; /**/
     
 
 }
